# basable

./: DEVELOPMENTS.MD  README.MD  VISUALIZE.MD  build.sh  dev.sh  run.sh  test.json
core/: .env.example  .gitignore  Cargo.toml  test.sh
core/app/: .gitignore  Cargo.toml
core/app/src/: foundation.rs  main.rs  state.rs  user.rs  utils.rs
core/app/src/http/: app.rs  middlewares.rs
core/app/src/http/routes/: auth.rs  graphs.rs  mod.rs  table.rs
core/base/: Cargo.toml
core/base/src/: config.rs  connector.rs  db.rs  lib.rs  table.rs
core/base/src/graphs/: category.rs  chrono.rs  geo.rs  mod.rs  trend.rs
core/base/src/mysql/: db.rs  table.rs
core/base/src/mysql_plugin/: connector.rs  graphs.rs  mod.rs
core/common/: Cargo.toml
core/common/src/: config.rs  error.rs  lib.rs
core/common/src/data/: columns.rs  mod.rs  table.rs
core/src/: globals.rs  main.rs  tests.rs  utils.rs
core/src/base/: auth.rs  column.rs  config.rs  connector.rs  db.rs  foundation.rs  mod.rs  table.rs  user.rs
core/src/base/data/: table.rs
core/src/base/imp/: connector.rs  db.rs  mod.rs  table.rs
core/src/base/imp/analysis/: chrono.rs  mod.rs  trend.rs
core/src/base/imp/graphs/: category.rs  chrono.rs  geo.rs  mod.rs  trend.rs
core/src/base/query/: filter.rs  mod.rs
core/src/http/: README.MD  app.rs  middlewares.rs  mod.rs
core/src/http/routes/: analysis.rs  auth.rs  graphs.rs  mod.rs  table.rs
core/src/http/tests/: mod.rs
core/src/imp/: mod.rs
core/src/imp/database/: mod.rs
core/src/imp/database/mysql/: connector.rs  db.rs  (+3 more)
core/src/types/: auth.rs  config.rs  mod.rs
core/tmp/: d21bd363-4e25-4575-8e4a-d5cfb55ac28c."csv"
core/web/: index.html
core/web/assets/: index-BAyIahi5.css  index-CE-2qzal.css  index-T9VzH26b.js  index-yKnohOBT.js
(+155 files in other folders)
