[package]
name = "basable"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.4"
axum-macros = "0.4.1"
chrono = "0.4.34"
jsonwebtoken = "9.3.0"
mysql = "24.0.0"
serde = "1.0.196"
serde_json = "1.0.113"
time = "0.3.36"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["cors", "trace", "tracing"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
urlencoding = "2.1.3"
