[package]
name = "base"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
serde = "1.0.196"
serde_json = "1.0.113"
urlencoding = "2.1.3"
axum = "0.7.4"
mysql = "24.0.0"
time = "0.3.36"
tracing = "0.1"
strum = "0.26"
strum_macros = "0.26"
mysql_common = "0.33.0"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
